--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "start": "node ./src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WhatsAppNETClient/WhatsAppNETClient2.git"
+  },
   "keywords": [],
   "author": "Kamarudin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/WhatsAppNETClient/WhatsAppNETClient2/issues"
+  },
+  "homepage": "http://wa-net.coding4ever.net/",
   "dependencies": {
     "dotenv": "^10.0.0",
     "mime-types": "^2.1.31",
